add_library(mars_rose STATIC
    "${CMAKE_CURRENT_SOURCE_DIR}/codegen.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/history.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/program_analysis.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/common.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/locations.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/report.cpp")

set_target_properties(mars_rose PROPERTIES
    LINKER_LANGUAGE CXX
    COMPILE_FLAGS "-DLINUX_COMMANDS -DHAS_DS_MARK \
    -DHAS_SYSTOLIC_FRONTEND -DHAS_SYSTOLIC_EXTRACT -DHAS_DS_LOOP_PARALLEL \
    -DHAS_LOOP_PARALLEL -DHAS_MARS_IR \
    -DHAS_STREAM_IR -DHAS_MEMORY_BURST -DHAS_LOWER_CPP \
    -DHAS_DEPENDENCY_RESOLVE \
    -DHAS_LOWER_SEPARATE -DHAS_COARSE_PIPELINE -DHAS_COARSE_PARALLEL \
    -DHAS_COARSE_PIPELINE_ALTERA -DHAS_DS_PIPELINE -DHAS_BITWIDTH_OPT \
    -DHAS_DS_BITWIDTH_OPT -DHAS_REDUCTION -DHAS_REDUCTION_GENERAL \
    -DHAS_PROGRAM_ANALYSIS -DHAS_ID_UPDATE -DHAS_PREPROCESS \
    -DHAS_FUNCTION_INLINE -DHAS_AUTO_FUNC_INLINE \
    -DHAS_AUTO_DIM_INTERCHANGE \
    -DHAS_KERNEL_WRAPPER -DHAS_KERNEL_PRAGMA_GEN \
    -DHAS_LOOP_TILING -DHAS_ALTERA_PREPROCESS \
    -DHAS_MEMORY_REDUCE -DHAS_MIDEND_PREPROCESS -DHAS_ALTERA_POSTPROCESS \
    -DHAS_STRUCT_DECOMPOSE  -DHAS_COMM_OPT  -DHAS_ARRAY_LINEARIZE \
    -DHAS_KERNEL_SEPARATE -DHAS_POSTWRAP_PROCESS -DHAS_MEMORY_PARTITION \
    -DHAS_PERFORMANCE_ESTIMATION -DHAS_GEN_TOKEN_ID -DHAS_GEN_HIERARCHY \
    -DHAS_ADD_PRAGMA_KERNEL -DHAS_FINAL_CODE_GEN -DHAS_DS_SCOPE -DHAS_DS_RESOURCE_EVAL -DHAS_DS_TILING \
    -DHAS_DS_SKELETON_EXTRACT -DHAS_LINE_BUFFER")

install(TARGETS mars_rose ARCHIVE DESTINATION lib)
